# SmartHomePanel

./: CMakeLists.txt  SmartHome.pro  SmartHomePanel.qml  actuator.cpp  actuator.h  device.cpp  device.h  devicecontroller.cpp  devicecontroller.h  lamp.cpp  lamp.h  main.cpp  networkhandler.cpp  networkhandler.h  rgblamp.cpp  rgblamp.h  sensor.cpp  sensor.h  thermostat.cpp  thermostat.h  weatherstation.cpp  weatherstation.h
ui/SmartHomeui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
